Added authentication to Fleet Management endpoints